--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="50dp"
         android:text="POST" />
 
     <TextView
@@ -74,5 +74,15 @@
         android:text="TextView"
         android:textSize="24sp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btnAddLocationChallenge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="115dp"
+        android:backgroundTint="#00BCD4"
+        android:text="Add location" />
 
 </RelativeLayout>
