--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -12,9 +12,8 @@
         android:layout_height="41dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="121dp"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="#2196F3"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="42dp"
         android:src="@android:drawable/ic_menu_camera" />
 
     <TextView
@@ -23,8 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="186dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="17dp"
         android:text="Take Video"
         android:textSize="20sp" />
 
@@ -76,5 +75,26 @@
         android:layout_marginBottom="113dp"
         android:backgroundTint="#00BCD4"
         android:text="Add location" />
+
+    <TextView
+        android:id="@+id/tvUpload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="27dp"
+        android:text="Upload Video"
+        android:textSize="20sp" />
+
+    <ImageView
+        android:id="@+id/ivUpload"
+        android:layout_width="61dp"
+        android:layout_height="43dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="54dp"
+        android:src="@android:drawable/ic_menu_upload" />
 
 </RelativeLayout>
