--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:text="TextView"
+        android:text="Loading..."
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -49,12 +49,12 @@
         android:layout_marginEnd="10dp">
 
         <TextView
-            android:id="@+id/tvUsernameFirst"
+            android:id="@+id/tvUsernameFirstCV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:layout_marginTop="10dp"
-            android:text="TextView"
+            android:text="Loading..."
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -103,7 +103,7 @@
             android:text="0" />
 
         <TextView
-            android:id="@+id/tvUsernameSecond"
+            android:id="@+id/tvUsernameSecondCV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
@@ -156,7 +156,7 @@
             android:src="@drawable/vote" />
 
         <TextView
-            android:id="@+id/tvUsernameThird"
+            android:id="@+id/tvUsernameThirdCV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
