--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,8 +12,14 @@
         android:title="@string/title_create" />
 
     <item
+        android:id="@+id/navigation_viewChallenges"
+        android:icon="@drawable/firstplace"
+        android:title="Challenges" />
+
+    <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_profile" />
+
 
 </menu>
