--- a/app/src/main/res/layout/fragment_all_challenges.xml
+++ b/app/src/main/res/layout/fragment_all_challenges.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllChallengesFragment">
+    tools:context=".ui.challenges.AllChallengesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvChallengeType"
