--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,9 +26,9 @@
         android:layout_below="@+id/tvAppName"
         android:layout_alignParentStart="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="10dp"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/mobile_navigation" />
+        android:layout_marginTop="10dp" />
+<!--        app:defaultNavHost="true"        app:navGraph="@navigation/mobile_navigation" -->
+
 
     <TextView
         android:id="@+id/tvAppName"
